<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pricer2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="product_list_btn_add">Add</string>
    <string name="product_list_btn_del">Del</string>
    <string name="product_detail_name_lbl">ProductName</string>
    <string name="product_detail_group_lbl">Group</string>
    <string name="product_detail_prices_lbl">Price</string> 
    <string name="group_list_btn_modify">Modify</string> 
    <string name="group_list_btn_remove">Remove</string>
    <string name="product_detail_factory_lbl">Factory</string>
    <string name="group_list_btn_new">New</string>
    <string name="factory_list_btn_modify">Modify</string>
    <string name="factory_list_btn_delete">Delete</string>
    <string name="factory_list_btn_new">New</string>
    
    <string name="price_detail_btn_new">New</string>
    <string name="price_detail_btn_modify">Mod</string>
    <string name="price_detail_cost_lbl">Cost</string>
    <string name="price_detail_shop_lbl">Shop</string>
    
    
    <string name="btn_Ok"> Ok </string>
    <string name="btn_Cancel"> Cancel </string>
    <string name="btn_Remove"> Remove </string>
    <string name="btn_New"> New </string> 
    
</resources>
